# o_learning_ros_caffe

./: CMakeLists.txt  README.md  README.md~  package.xml  package.xml~
back_up_working/: trainnet.h  trainnet_trial_net_modifying.cpp
data/: VGG_CNN_S_finetune.prototxt  VGG_CNN_S_finetune.prototxt~  deploy_nin.prototxt~
src/: Classifier.cpp  Classifier.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rosthread.cpp  rosthread.h  trainnet.cpp
